2005-03-21  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist.h: Modified Cerebrod_clusterlist_get_nodename prototype to take a unsigned int buflen instead of an int buflen.

	* src/cerebrod/cerebrod_clusterlist.c,
	src/cerebrod/cerebrod_clusterlist_none.c,
	src/cerebrod_clusterlist_hostsfile.c,
	src/cerebrod_clusterlist_genders.c,
	src/cerebrod_clusterlist_gendersllnl.c,
	src/cerebrod_clusterlist_util.h,
	src/cerebrod/cerebrod_clusterlist_util.c: Modified for changed
	parameter type.
	
2005-03-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_pre_calculate_configuration_config_check): Add
	port checks.

	* src/cerebrod/cerebrod_config.h: New default ports.

	* man/cerebrod.conf.5.in: Completed first draft.

	* src/cerebrod/cerebrod_config.c (_config_load_module),
	src/cerebrod/cerebrod_clusterlist.c (_clusterlist_load_module):
	Add additional module loading checks.

	* src/cerebrod/cerebrod_clusterlist.c
	(cerebrod_clusterlist_setup): Fix filename bug.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_module_setup,
	_cerebrod_cmdline_parse_check): Fix logic error in check/load
	routines.  Rename "configfile" and "configmodule" to "config_file"
	and "config_module" globally respectively.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_dump): Add
	forgotten field.

	* src/cerebrod/cerebrod_cache.h, src/cerebrod/cerebrod_cache.c:
	Renamed to cerebrod_system_data.h and cerebrod_system_data.c.  API
	modified appropriately and changed globally.

	* src/cerebrod/: Added significant commenting and documentation
	throughout code and various cleanup.

2005-03-19  Albert Chu  <chu11@llnl.gov>

	* Fixed variety of compiler warnings.

	* man/cerebro.1.in: New file.
	
	* configure.ac, man/Makefile.am: Updated for new manpages.

	* config/ac_cerebrod_configfile.m4: New file.

	* configure.ac: Add ac_cerebrod_configfile config option.

	* config/ac_hostsfile.m4: AC_SUBST the hostsfile.
